<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="248dp"
    android:background="@drawable/view_round_r12_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/logout_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/font_title_3"
        android:text="@string/logout_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/logout_desc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_caption_text_3"
        android:text="@string/logout_desc"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:lineHeight="18sp"
        app:layout_constraintStart_toStartOf="@id/logout_title_txt"
        app:layout_constraintTop_toBottomOf="@id/logout_title_txt"/>

    <Button
        android:id="@+id/logout_yes_btn"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginBottom="6dp"
        android:layout_marginHorizontal="21dp"
        android:fontFamily="@font/font_caption_text_1"
        android:text="@string/logout_yes"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:background="@drawable/background_community_dialog_blue_btn"
        app:layout_constraintBottom_toTopOf="@id/logout_no_btn" />
    <Button
        android:id="@+id/logout_no_btn"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginBottom="26dp"
        android:layout_marginHorizontal="21dp"
        android:fontFamily="@font/font_caption_text_1"
        android:text="@string/logout_no"
        android:textColor="@color/gray5"
        android:textSize="12sp"
        android:textStyle="bold"
        android:background="@drawable/background_mission_report_no_btn"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>