<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="248dp"
    android:background="@drawable/view_round_r15"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/mission_report_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/font_title_3"
        android:text="@string/mission_report_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/mission_report_desc_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_caption_text_3"
        android:text="@string/mission_report_desc"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@id/mission_report_title_txt"
        app:layout_constraintTop_toBottomOf="@id/mission_report_title_txt"/>

    <Button
        android:id="@+id/mission_report_yes_btn"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginBottom="6dp"
        android:layout_marginHorizontal="21dp"
        android:fontFamily="@font/font_inter"
        android:padding="15dp"
        android:text="@string/mission_report_yes"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/background_mission_report_yes_btn"
        app:layout_constraintBottom_toTopOf="@id/mission_report_no_btn" />
    <Button
        android:id="@+id/mission_report_no_btn"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginBottom="26dp"
        android:layout_marginHorizontal="21dp"
        android:fontFamily="@font/font_inter"
        android:padding="15dp"
        android:text="@string/mission_report_no"
        android:textColor="@color/gray5"
        android:textSize="12sp"
        android:textStyle="bold"
        android:background="@drawable/background_mission_report_no_btn"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>